src/components/navbar/navbar.scss
.navbar {
  padding: 20px 0;
  background-color: transparent;
  color: #fff;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  padding: 20px 0;
  background-color: transparent;
  transition: all 0.4s ease-in-out;

  &-inner {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
  }

  &--active {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    padding: 20px 0;
    background-color: #154599;
    transition: all 0.4s ease-in-out;

    button path {
      fill: #ffffff;
    }

    a {
      color: #ffffff;
    }
  }

  &-toggle {
    background-color: transparent;
    border: none;
    padding: 0;
    cursor: pointer;

    path {
      fill: #fff;
    }

    @media screen and (min-width: 720px) {
      display: none;
    }
  }

  &-menu {
    margin: 0;
    padding: 0;
    list-style: none;
    display: flex;
    gap: 20px;

    @media screen and (max-width: 720px) {
      display: none;
    }

    &--active {
      display: block;
      width: 100%;
      background-color: inherit;
      margin: 0;
      padding: 20px 0 10px;
      list-style: none;

      a {
        display: block;
        padding: 10px 0;
      }
    }
  }

  &-link {
    color: inherit;
  }
}

